--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <input type="text" name="fname" placeholder="Имя" id="name" />
                             <input type="text" name="lname" placeholder="Фамилия" id="name" />
                             <input type="email" name="email" placeholder="Email" id="email" />
-                            <input type="text" name="fullphone" placeholder="" id="phone1" />
+                            <input type="text" name="fullphone" placeholder="Номер телефона" id="phone1" />
                             <!----><!--Заполните данные--><!---->
                             <input type="hidden" name="link_id" value="2117" />  
                             <input type="hidden" name="source" value="Binance_chain" />
