--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                 ru: {
                     1: 'Ведите последние 5 цифр номера с которого вам поступил звонок',
                     2: 'Код не верен',
-                    200: "Регистрация успешно пройдена",
+                    200: "Регистрация успешно пройдена <br> Ожидайте звонка нашего специалиста который объяснит как начать",
                     400: 'Возникли проблемы с регистрацией пользователя. Возможные причины: ',
                     403: 'Не все обязательные поля были заполнены',
                     500: 'Временные неполадки сервера, извините. Попробуйте позже, мы уже проводим технические работы по исправлению данной проблемы!',
