--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                         <input type="text" name="fname" placeholder="Имя" id="name2" />
                         <input type="text" name="lname" placeholder="Фамилия" id="name2" />
                         <input type="email" name="email" placeholder="Email" id="email2" />
-                        <input type="text" name="fullphone" placeholder="" id="phone2" />
+                        <input type="text" name="fullphone" placeholder="Номер телефона" id="phone2" />
                         <!----><!--Заполните данные--><!---->
                         <input type="hidden" name="link_id" value="2117" />  
                         <input type="hidden" name="source" value="Binance_chain" />
